<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatosPersonales">


    <TextView
        android:id="@+id/tvEditar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_margin="20dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:text="@string/detalles"
      />


    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:text="@string/fecha" />

    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/telefono"
        android:textStyle="bold"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_margin="20dp" />

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/descripcion"
        android:textStyle="bold"
        android:layout_margin="20dp"/>


    <Button
        android:id="@+id/botonEditar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/cardview_light_background"
        android:text="@string/editar">

    </Button>


</androidx.appcompat.widget.LinearLayoutCompat>